<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Profile.ConfigAddressFragment">

    <TextView
        android:id="@+id/fragConfigAddressTvAddress"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/configuration_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fragConfigAddressIbEditAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/configuration"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/fragConfigAddressTvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragConfigAddressTvAddress" />

    <EditText
        android:id="@+id/fragConfigAddressEtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:hint="@string/configuration_address"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigAddressTvAddress" />

    <Button
        android:id="@+id/fragConfigAddressBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        style="@style/generalButton"
        android:text="@string/update"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigAddressEtAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>