<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Profile.ConfigPaymentFragment">

    <TextView
        android:id="@+id/fragConfigPaymentTvCreditCard"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/credit_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fragConfigPaymentIbEditCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/configuration"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/fragConfigPaymentTvCreditCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragConfigPaymentTvCreditCard" />

    <EditText
        android:id="@+id/fragConfigPaymentEtCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:hint="@string/credit_card"
        android:autofillHints="creditCardNumber"
        android:inputType="number"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigPaymentTvCreditCard" />

    <TextView
        android:id="@+id/fragConfigPaymentTvDebitCard"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/debit_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigPaymentEtCreditCard" />

    <ImageButton
        android:id="@+id/fragConfigPaymentIbEditDebitCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/configuration"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/fragConfigPaymentTvDebitCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragConfigPaymentTvDebitCard" />

    <EditText
        android:id="@+id/fragConfigPaymentEtDebitCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:hint="@string/debit_card"
        android:autofillHints="creditCardNumber"
        android:inputType="number"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigPaymentTvDebitCard" />

    <Button
        android:id="@+id/fragConfigPaymentBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        style="@style/generalButton"
        android:text="@string/update"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragConfigPaymentEtDebitCard" />

</androidx.constraintlayout.widget.ConstraintLayout>